linter/src/rules/snapshots/squawk_linter__rules__adding_not_null_field__test_rules__adding_field_that_is_not_nullable-2.snap
---
source: linter/src/rules/adding_not_null_field.rs
expression: "lint_sql(bad_sql, None)"
---
[
    RuleViolation {
        kind: AddingNotNullableField,
        span: Span {
            start: 0,
            len: Some(
                124,
            ),
        },
        messages: [
            Note(
                "Adding a NOT NULL field requires exclusive locks and table rewrites.",
            ),
            Help(
                "Make the field nullable.",
            ),
        ],
    },
]
