linter/src/rules/snapshots/squawk_linter__rules__adding_not_null_field__test_rules__adding_field_that_is_not_nullable_in_version_11.snap
---
source: linter/src/rules/adding_not_null_field.rs
expression: "check_sql(ok_sql, &[RuleViolationKind::PreferRobustStmts],\n    Option<PgVersion>::parse(\"11.0.0\").unwrap())"
---
Ok(
    [],
)
